# EventServer

./: CMakeLists.txt  README.md  main.cpp
connections/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ConnectionsServer.cpp  ConnectionsServer.h  ServerConfiguration.cpp  ServerConfiguration.h
database/: CMakeLists.txt
docs/: eventServerET.md
main/: CMakeLists.txt  DaemonServer.cpp  DaemonServer.h  GlobalFlags.cpp  GlobalFlags.h  OptionsHandler.cpp  OptionsHandler.h
proto/: CMakeLists.txt  messages.pb.cc  messages.pb.h  messages.proto
